--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\202311152038300_mig_mig4.designer.cs">
       <DependentUpon>202311152038300_mig_mig4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202311161901310_mig_migrationstatus.cs" />
+    <Compile Include="Migrations\202311161901310_mig_migrationstatus.designer.cs">
+      <DependentUpon>202311161901310_mig_migrationstatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -113,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202311152038300_mig_mig4.resx">
       <DependentUpon>202311152038300_mig_mig4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202311161901310_mig_migrationstatus.resx">
+      <DependentUpon>202311161901310_mig_migrationstatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
