--- a/MvcProjeKampi/MvcProjeKampi.csproj
+++ b/MvcProjeKampi/MvcProjeKampi.csproj
@@ -140,6 +140,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminCategoryController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\ContentController.cs" />
     <Compile Include="Controllers\HeadingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\WriterController.cs" />
@@ -2284,6 +2285,8 @@
     <Content Include="Views\Writer\WriterUpdate.cshtml" />
     <Content Include="Views\Heading\Index.cshtml" />
     <Content Include="Views\Heading\HeadingAdd.cshtml" />
+    <Content Include="Views\Heading\ContentByHeading.cshtml" />
+    <Content Include="Views\Content\ContentByHeading.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
