--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202311162039001_mig_headingStatus.designer.cs">
       <DependentUpon>202311162039001_mig_headingStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202311271034584_mig_message_class.cs" />
+    <Compile Include="Migrations\202311271034584_mig_message_class.designer.cs">
+      <DependentUpon>202311271034584_mig_message_class.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202311162039001_mig_headingStatus.resx">
       <DependentUpon>202311162039001_mig_headingStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202311271034584_mig_message_class.resx">
+      <DependentUpon>202311271034584_mig_message_class.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
