--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -98,6 +98,10 @@
     <Compile Include="Migrations\202311271034584_mig_message_class.designer.cs">
       <DependentUpon>202311271034584_mig_message_class.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202311271311479_mig_contactdate.cs" />
+    <Compile Include="Migrations\202311271311479_mig_contactdate.designer.cs">
+      <DependentUpon>202311271311479_mig_contactdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -143,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202311271034584_mig_message_class.resx">
       <DependentUpon>202311271034584_mig_message_class.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202311271311479_mig_contactdate.resx">
+      <DependentUpon>202311271311479_mig_contactdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
