--- a/MvcProjeKampi/bin/MvcProjeKampi.dll.config
+++ b/MvcProjeKampi/bin/MvcProjeKampi.dll.config
@@ -19,6 +19,15 @@
 		  <error statusCode="404" redirect="/ErrorPage404/Page404/"/>
 	  </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="/Login/Index/"></forms>
+	  </authentication>
+	  <roleManager enabled="true" defaultProvider="DenemeRoleProvider">
+		  <providers>
+			  <add name="DenemeRoleProvider" type="MvcProjeKampi.Roles.AdminRoleProvider"/>
+		  </providers>
+		  
+	  </roleManager>
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
