--- a/MvcProjeKampi/MvcProjeKampi.csproj
+++ b/MvcProjeKampi/MvcProjeKampi.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\WriterController.cs" />
+    <Compile Include="Controllers\WriterPanelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -2431,6 +2432,11 @@
     <Content Include="Templates\login-form-19\scss\bootstrap\_utilities.scss" />
     <Content Include="Templates\login-form-19\scss\bootstrap\_variables.scss" />
     <Content Include="Templates\login-form-19\scss\style.scss" />
+    <Content Include="Views\Shared\_WriterLayout.cshtml" />
+    <Content Include="Views\WriterPanel\WriterProfile.cshtml" />
+    <Content Include="Views\WriterPanel\MyHeading.cshtml" />
+    <Content Include="Views\WriterPanel\NewHeading.cshtml" />
+    <Content Include="Views\WriterPanel\HeadingUpdate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
