--- a/MvcProjeKampi/bin/MvcProjeKampi.dll.config
+++ b/MvcProjeKampi/bin/MvcProjeKampi.dll.config
@@ -15,9 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <customErrors mode="On">
+	  <!--<customErrors mode="On">
 		  <error statusCode="404" redirect="/ErrorPage404/Page404/"/>
-	  </customErrors>
+	  </customErrors>-->
     <compilation debug="true" targetFramework="4.7.2" />
 	  <authentication mode="Forms">
 		  <forms loginUrl="/Login/Index/"></forms>
